# Meeting2Blog

./: Makefile  README.md  pyproject.toml  requirements.txt
api/: response.py  serve.py
backend/: pyproject.toml
backend/api/: response.py  serve.py  synthesis.py
meeting2blog/: __init__.py  response.py  serve.py  synthesize.py
meeting2blog/api/: serve.py
meeting2blog/web_app/: index.html
public/: index.html  script.js  styles.css
web_app/: index.html  script.js  styles.css
