[tool.poetry]
name = "meeting2blog"
version = "0.1.0"
description = "webapp API for platogram"
authors = ["axelKeizoStahl <axelkeizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
platogram = {git = "https://github.com/code-anyway/platogram.git"}
fastapi = "^0.111.0"
pypandoc-binary = "^1.13"
fpdf2 = "^2.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
