[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["axelKeizoStahl <axelkeizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
platogram = {git = "https://github.com/code-anyway/platogram.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
